  - updated the collection portlet to display people
  - added document_reference_view.pt for the How to Apply pages
  - fixed css for printing
  - added css formatting for embedded videos
  - added the news item proofing view
  - removed the default job title for graduate students
  - fixed the December edge case in eventdates.js
  - updated person_view.pt to handle the new schemata changes
  - added support for the new advisors field on FSDPerson
  - updated the search results template to display nicknames
     and job titles
  - added setdates.js for now and today buttons


HuckTheme 3.0 (27 August 2010)
-------------------------------------
* Release name: fadeToBlue
* Theme product converted to an egg using the Product from
   Scratch documentation:
   http://weblion.psu.edu/documentation/plone-documentation/products-from-scratch
* New look to the site using faded blue images in the header
   and footer along with some significant rearranging of the
   header and global navigation
* Unit branding created in the 2.0 version is preserved, but
   moved to a different, more suitable area
* This release combines a lot of other improvements to 
   FSD Person objects and their associated views
* This release coincides with a drastic re-architecting
   of the institutes and centers into a "research" category
   and the introduction of Products.HuckEntities to provide
   custom content types to represent Institutes, Centers,
   Graduate Programs, Facilities, and Equipment
  - most of this re-architecting did not make it into the
     actual release due to content limitations and time
     constraints, but the code and styling is there to
     support it as we move forward.
* Added support for a javascript powered image rotator on
   the home page that displays selected news items


HuckTheme 3.0.1 (Unreleased)
-------------------------------------
* Release name: fadeToBlue
* Turned off the vacation message by default with the CSS
* 